--- a/modul_1/android/app/src/main/AndroidManifest.xml
+++ b/modul_1/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="mobile_prac"
+        android:label="modul_1"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
